<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_theme"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/button_rounded_option_light"
        android:text="🌞 | 🌚"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_expenses" />

    <Button
        android:id="@+id/button_income"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="50dp"
        android:background="?attr/button_income"
        android:text="@string/income"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_expenses"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:background="?attr/button_expense"
        android:text="@string/expense"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_income" />

    <TextView
        android:id="@+id/textView_greet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:text="@string/gm"
        android:textColor="?attr/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/what"
        android:textColor="?attr/textColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_greet" />

    <TextView
        android:id="@+id/textView_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/test"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>